Add EditLogEndpoint
This endpoint will be used as example process throughout the initial
process implementation.
